--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,20 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:$roomVersion"
     kapt "android.arch.persistence.room:compiler:$roomVersion"
 
+    //이미지처리를 위한 glide, 이미지 줌을 위한 Photoview 라이브러리 사용
+    /**
+     * PhotoView
+     * https://github.com/chrisbanes/PhotoView
+     *
+     * Glide
+     * https://github.com/bumptech/glide
+     */
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
+
     // rx
     implementation "io.reactivex.rxjava2:rxjava:$rxjava2_version"
     implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
@@ -65,6 +79,10 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-scalars:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+
+    //coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7'
 
     // dependency injection
     implementation "com.google.dagger:dagger:$dagger2_version"
