--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,14 +23,15 @@
         android:theme="@style/Base.AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".ui.FullScreenImgActivity"/>
+        <activity android:name=".ui.FullScreenImgActivity" />
         <activity
             android:name=".ui.addeditmemo.AddEditMemoActivity"
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity android:name=".ui.memo.MemoActivity" />
         <activity android:name=".ui.gallery.GalleryActivity" />
+        <activity android:name=".ui.main.MainActivity" />
         <activity
-            android:name=".ui.main.MainActivity"
+            android:name=".ui.login.LoginActivity"
             android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
