--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".ui.memo.MemoActivity" />
         <activity android:name=".ui.gallery.GalleryActivity" />
         <activity android:name=".ui.main.MainActivity" />
+        <activity android:name=".ui.stray.StrayActivity" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:windowSoftInputMode="stateAlwaysHidden">
