--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,8 +67,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
 
-    implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
-
+    implementation 'com.github.applikeysolutions:cosmocalendar:1.0.4'
     // rx
     implementation "io.reactivex.rxjava2:rxjava:$rxjava2_version"
     implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
