--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:$roomVersion"
     kapt "android.arch.persistence.room:compiler:$roomVersion"
 
+    //noinspection GradleCompatible
+    implementation "com.android.support:design:27.1.1"
+
     //이미지처리를 위한 glide, 이미지 줌을 위한 Photoview 라이브러리 사용
     /**
      * PhotoView
