--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
         <activity android:name=".ui.main.MainActivity" />
         <activity android:name=".ui.stray.StrayActivity"
             android:theme="@style/TextLabel"/>
+        <activity android:name=".ui.stray_detail.Stray_DetailActivity"
+            android:theme="@style/Animation"/>
         <activity
             android:name=".ui.login.LoginActivity"
             android:windowSoftInputMode="stateAlwaysHidden">
