--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
 
     implementation 'com.github.applikeysolutions:cosmocalendar:1.0.4'
+    implementation 'com.github.cesarferreira:MaterialComponent.Banner:0.14.0'
     // rx
     implementation "io.reactivex.rxjava2:rxjava:$rxjava2_version"
     implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
