--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileOptions {
@@ -71,7 +72,11 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
 
     implementation 'com.github.applikeysolutions:cosmocalendar:1.0.4'
-    implementation 'com.github.cesarferreira:MaterialComponent.Banner:0.14.0'
+
+    //google
+    implementation 'com.google.firebase:firebase-core:17.0.0'
+    implementation 'com.google.android.gms:play-services-auth:18.0.0'
+
     // rx
     implementation "io.reactivex.rxjava2:rxjava:$rxjava2_version"
     implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
